Replace URL to URI, resolves #8.