@@ -12,6 +12,8 @@ import ru.wobot.sm.core.fetch.SMFetcher;
 import ru.wobot.sm.core.url.UrlCheck;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
@@ -44,62 +46,62 @@ public class DomainService {
         return postsCount;
     }
 
-    public SMContent request(String urlString) throws IOException {
-        URL url = new URL(urlString);
-        String userDomain = url.getHost();
-        if (UrlCheck.isProfile(url)) {
-            return createProfileResponse(url);
+    public SMContent request(String urlString) throws IOException, URISyntaxException {
+        URI uri = new URI(urlString);
+        String userDomain = uri.getHost();
+        if (UrlCheck.isProfile(uri)) {
+            return createProfileResponse(uri);
         }
-        if (UrlCheck.isFriends(url)) {
+        if (UrlCheck.isFriends(uri)) {
             return createFriendsResponse(userDomain, urlString);
         }
-        if (UrlCheck.isPostsIndex(url)) {
+        if (UrlCheck.isPostsIndex(uri)) {
             return createPostsIndexResponse(userDomain, urlString);
         }
-        if (UrlCheck.isPostsIndexPage(url)) {
-            return createPostsIndexPageResponse(url);
+        if (UrlCheck.isPostsIndexPage(uri)) {
+            return createPostsIndexPageResponse(uri);
         }
-        if (UrlCheck.isPost(url)) {
-            return createPostResponse(url);
+        if (UrlCheck.isPost(uri)) {
+            return createPostResponse(uri);
         }
-        if (UrlCheck.isCommentPage(url)) {
-            return createCommentPageResponse(url);
+        if (UrlCheck.isCommentPage(uri)) {
+            return createCommentPageResponse(uri);
         }
 
         throw new UnsupportedOperationException();
     }
 
-    private SMContent createCommentPageResponse(URL url) throws IOException {
-        String userDomain = url.getHost();
+    private SMContent createCommentPageResponse(URI uri) throws IOException {
+        String userDomain = uri.getHost();
         SMProfile user = getUserProfile(userDomain);
-        String path = url.getPath();
+        String path = uri.getPath();
         String[] split = path.split("/");
         String postId = split[2];
         int page = Integer.parseInt(split[4]);
         //TODO: HACK - remove
         String param = null;
-        if (url.getProtocol().equals(Sources.VKONTAKTE)) {
+        if (uri.getScheme().equals(Sources.VKONTAKTE)) {
             param = user.getId();
-        } else if (url.getProtocol().equals(Sources.FACEBOOK)) {
-            String queryParam = url.getQuery();
+        } else if (uri.getScheme().equals(Sources.FACEBOOK)) {
+            String queryParam = uri.getQuery();
             if (queryParam != null)
                 param = queryParam.substring(queryParam.indexOf("=") + 1);
         }
 
         FetchResponse fetchResponse = smService.getPostCommentsData(param, postId, POSTS_LIMIT, page * POSTS_LIMIT
         );
-        return new SMContent(url.toString(), fetchResponse.getData().getBytes(StandardCharsets.UTF_8), fetchResponse.getMetadata());
+        return new SMContent(uri.toString(), fetchResponse.getData().getBytes(StandardCharsets.UTF_8), fetchResponse.getMetadata());
     }
 
-    private SMContent createProfileResponse(URL url) throws IOException {
-        String userDomain = url.getHost();
+    private SMContent createProfileResponse(URI uri) throws IOException {
+        String userDomain = uri.getHost();
         //TODO: rewrite for different scopes
-        if (url.getQuery() != null)
-            userDomain += "?" + url.getQuery();
+        if (uri.getQuery() != null)
+            userDomain += "?" + uri.getQuery();
 
         SMProfile user = getUserProfile(userDomain);
         FetchResponse fetchResponse = smService.getProfileData(user.getId());
-        return new SMContent(url.toString(), fetchResponse.getData().getBytes(StandardCharsets.UTF_8), fetchResponse
+        return new SMContent(uri.toString(), fetchResponse.getData().getBytes(StandardCharsets.UTF_8), fetchResponse
                 .getMetadata());
     }
 
@@ -125,32 +127,32 @@ public class DomainService {
     }
 
     // http://user/index-posts/x100/0000000001
-    private SMContent createPostsIndexPageResponse(URL url) throws IOException {
-        SMProfile user = getUserProfile(url.getHost());
+    private SMContent createPostsIndexPageResponse(URI uri) throws IOException {
+        SMProfile user = getUserProfile(uri.getHost());
 
-        String path = url.getPath();
+        String path = uri.getPath();
         String pageStr = path.substring(path.lastIndexOf('/') + 1);
         long offset = 0;
         //TODO: HACK - remove
-        if (url.getProtocol().equals(Sources.VKONTAKTE)) {
+        if (uri.getScheme().equals(Sources.VKONTAKTE)) {
             int page = Integer.parseInt(pageStr);
             int totalPosts = getPostCountForUser(user.getId());
             offset = totalPosts - (page + 1) * POSTS_LIMIT;
-        } else if (url.getProtocol().equals(Sources.FACEBOOK)) {
+        } else if (uri.getScheme().equals(Sources.FACEBOOK)) {
             offset = Long.parseLong(pageStr);
         }
 
         FetchResponse fetchResponse = smService.getPostsData(user.getId(), offset, POSTS_LIMIT);
-        return new SMContent(url.toString(), fetchResponse.getData().getBytes(StandardCharsets.UTF_8), fetchResponse.getMetadata());
+        return new SMContent(uri.toString(), fetchResponse.getData().getBytes(StandardCharsets.UTF_8), fetchResponse.getMetadata());
     }
 
-    private SMContent createPostResponse(URL url) throws IOException {
-        SMProfile user = getUserProfile(url.getHost());
+    private SMContent createPostResponse(URI uri) throws IOException {
+        SMProfile user = getUserProfile(uri.getHost());
 
-        String path = url.getPath();
+        String path = uri.getPath();
         String posId = path.substring(path.lastIndexOf('/') + 1);
         FetchResponse fetchResponse = smService.getPostData(user.getId(), posId);
-        return new SMContent(url.toString(), fetchResponse.getData().getBytes(StandardCharsets.UTF_8), fetchResponse.getMetadata());
+        return new SMContent(uri.toString(), fetchResponse.getData().getBytes(StandardCharsets.UTF_8), fetchResponse.getMetadata());
     }
 
     private SMProfile getUserProfile(String userDomain) throws IOException {
